tests/snapshots/tui_autofixup_confirm__autofixup_confirm_dialog_narrow_terminal.snap
---
source: tests/tui_autofixup_confirm.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::autofixup::render_autofixup_confirm(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 15 },
    content: [
        "SHA        Title                        ",
        "ab┌ Confirm Autofixup ───────────────┐  ",
        "de│                                  █  ",
        "  │ Squash 1 commit(s) into 1        █  ",
        "  │target(s)?                        █  ",
        "  │                                  █  ",
        "  │ ↑/↓ to select a target, r to     █  ",
        "  │ edit its final message:          █  ",
        "  │                                  █  ",
        "  │▸ def456gh Add parser             █  ",
        "  │    abc123de  fixup! Add parser   █  ",
        "  │                                  █  ",
        "  │  Enter Confirm   r Edit message  │  ",
        "  └──────────────────────────────────┘  ",
        " abc123def456 2/2    Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 2, y: 1, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 2, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 29, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 13, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 4, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 5, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 32, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 5, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 13, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 24, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 5, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 21, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 23, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 39, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
