tests/snapshots/tui_autofixup_confirm__autofixup_confirm_dialog_shows_edited_indicator.snap
---
source: tests/tui_autofixup_confirm.rs
expression: "harness.render(|frame|\n{\n    views::commit_list::render(&mut app, frame);\n    views::autofixup::render_autofixup_confirm(&mut app, frame);\n})"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   Add parser                                                           ",
        "def456gh   fixup! Add parser                                                    ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "     ┌ Confirm Autofixup ─────────────────────────────────────────────────┐     ",
        "     │                                                                    │     ",
        "     │ Squash 1 commit(s) into 1 target(s)?                               │     ",
        "     │                                                                    │     ",
        "     │ ↑/↓ to select a target, r to edit its final message:               │     ",
        "     │                                                                    │     ",
        "     │▸ def456gh Add parser (edited)                                      │     ",
        "     │    abc123de  fixup! Add parser                                     │     ",
        "     │                                                                    │     ",
        "     │             Enter Confirm   r Edit message   Esc Cancel            │     ",
        "     │                                                                    │     ",
        "     └────────────────────────────────────────────────────────────────────┘     ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 7, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 43, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 8, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 10, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 11, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 8, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 27, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 36, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 12, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 13, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 13, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 14, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 14, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 15, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 19, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 37, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 52, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 56, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 15, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 16, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 6, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 74, y: 16, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 17, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 75, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
